Visual fixes for pricing section on mobile displays

--- a/static_files/css/_variables.scss
+++ b/static_files/css/_variables.scss
@@ -5,6 +5,7 @@
 $modal-content-border-width: 0;
 $modal-backdrop-bg: black;
 $modal-backdrop-opacity: .8;
+$dropdown-divider-bg: rgba(255,255,255,0.175);
 
 @import "./variables/colors.scss";
 @import "./variables/typography.scss";
