--- a/static_files/css/sections/_pricing.scss
+++ b/static_files/css/sections/_pricing.scss
@@ -42,6 +42,13 @@
     padding-bottom: 10rem;
 }
 
+[name="tariffAdvantages"] {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.2);
+    box-shadow: inset -2px -2px 3px rgba(255,255,255,0.1),
+                inset  2px 2px 3px rgba(0,0,0,0.05) !important;
+}
+
 
 button[name='detailsButton'] {
     background-color: inherit !important;
